<resources>
    <string name="app_name">Dice Game</string>
    <string name="background_image_description">The default background image for the application.</string>
    <string name="quit">Quit</string>
    <string name="play">Play</string>
    <string name="roll">Roll</string>
    <string name="hold">Hold</string>
    <string name="defaultNumber">0</string>
    <string name="player1text">Player 1\'s Turn</string>
    <string name="player2text">Player 2\'s Turn</string>
    <string name="player1_win_message">Player 1 Wins!</string>
    <string name="player2_win_message">Player 2 Wins!</string>
</resources>
