<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentPlayerTurn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/p1color"
        android:gravity="center"
        android:text="@string/player1text"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scoreLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player1Score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/p1color"
            android:gravity="center"
            android:text="@string/defaultNumber"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="0" />

        <TextView
            android:id="@+id/player2Score"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/p2color"
            android:gravity="center"
            android:text="@string/defaultNumber"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diceLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gameButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/die1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/die_face_1" />

        <TextView
            android:id="@+id/turnScore"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:text="0"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/die2"
            app:layout_constraintStart_toEndOf="@+id/die1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/die2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/die_face_6" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameButtonLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/holdButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="hold"
            android:text="@string/hold"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rollButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:onClick="roll"
            android:text="@string/roll"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>